syntax = "proto3";
package interchain_security.ccv.child.v1;

import "gogoproto/gogo.proto";
import "tendermint/abci/types.proto";

option go_package = "github.com/cosmos/interchain-security/x/ccv/child/types";


// Params defines the parameters for CCV child module
message Params {
    bool Enabled = 1;
}


// CrossChainValidator defines the validators for CCV child module
message CrossChainValidator {
    bytes address = 1;
    tendermint.abci.ValidatorUpdate validator_update = 2
      [(gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"last_update\""];
}