syntax = "proto3";
package interchain_security.ccv.parent.v1;

option go_package = "github.com/cosmos/interchain-security/x/ccv/parent/types";

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "interchain_security/ccv/child/v1/genesis.proto";


service Query {
  // ChildGenesis queries the genesis state needed to start a child chain whose proposal
  // has been accepted
  rpc ChildGenesis(QueryChildGenesisRequest) returns (QueryChildGenesisResponse) {
    option (google.api.http).get = "/interchain_security/ccv/parent/child_genesis/{chain_id}";
  }
}

message QueryChildGenesisRequest {
  string chain_id = 1;
}

message QueryChildGenesisResponse {
    interchain_security.ccv.child.v1.GenesisState genesis_state = 1 [(gogoproto.nullable) = false];
}